<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:text="@string/tv_time"
                android:textSize="13sp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_dp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_sp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_hr"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_hr"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_level"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/input_time"
                    android:layout_width="0dp"
                    android:layout_weight="1.2"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/input_sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/input_dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/input_hr"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/input_level"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>